--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "vidiasoft/azulk",
-    "description": "Proyecto de puntos AzulK",
+    "name": "vidiasoft/ramo",
+    "description": "Proyecto de puntos ramo",
     "type": "project",
     "license": "MIT",
     "authors": [
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "hybridauth/hybridauth": "^3.6"
     },
     "autoload": {
         "psr-4": {
