--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "hybridauth/hybridauth": "^3.6"
+        "hybridauth/hybridauth": "^3.6",
+        "vlucas/phpdotenv": "^5.3"
     },
     "autoload": {
         "psr-4": {
