--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "hybridauth/hybridauth": "^3.6",
-        "vlucas/phpdotenv": "^5.3"
+        "vlucas/phpdotenv": "^5.3",
+        "lasserafn/php-initial-avatar-generator": "^4.2"
     },
     "autoload": {
         "psr-4": {
