--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "require": {
         "hybridauth/hybridauth": "^3.6",
-        "vlucas/phpdotenv": "^5.3",
-        "lasserafn/php-initial-avatar-generator": "^4.2"
+        "vlucas/phpdotenv": "^5.3"
     },
     "autoload": {
         "psr-4": {
